fix long line wrapping for log output #1558

--- a/rundeckapp/grails-app/assets/stylesheets/rundeck.less
+++ b/rundeckapp/grails-app/assets/stylesheets/rundeck.less
@@ -1132,7 +1132,7 @@ section{
     }
     td.data {
       border-left: 1px solid white;
-      white-space: pre;
+      white-space: pre-wrap;
       font-family: "Lucida Console", courier, monospace;
       padding: 1px 3px;
       color: black;
@@ -1191,7 +1191,7 @@ section{
     }
   }
   .log_line{
-    white-space: pre;
+    white-space: pre-wrap;
     font-family: "Lucida Console", courier, monospace;
     color: black;
     &.level_verbose, &.level_debug {
